# FineTeX-2

./: CHANGELOG.md  README.md  cabal.project  finetex.cabal
app/: Main.hs
src/Language/: FineTeX.hs
src/Language/FineTeX/: Source.hs  Utils.hs
src/Language/FineTeX/Source/: Errors.hs  Preprocess.hs  Syntax.hs
src/Language/FineTeX/Source/Parser/: Definitions.hs  Utils.hs
test/: Spec.hs  Utils.hs  UtilsSpec.hs
test/Source/: PreprocessSpec.hs
test/Source/Parser/: Definitions.hs  DefinitionsSpec.hs  UtilsSpec.hs
