cabal-version:      3.0
name:               finetex
version:            0.1.0.0
synopsis:           Fine markup language targeting into LaTeX

-- A longer description of the package.
-- description:
homepage:           https://github.com/Lev135/FineTeX-2

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lev Dvorkin
maintainer:         lev_135@mail.ru

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable finetex
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        finetex

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite finetex-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
