cabal-version:      3.0
name:               finetex
version:            0.1.0.0

synopsis:           Fine markup language targeting into LaTeX
description:

homepage:           https://github.com/Lev135/FineTeX-2
bug-reports:        https://github.com/Lev135/FineTeX-2/issues

license:            BSD-3-Clause
license-file:       LICENSE
author:             Lev Dvorkin
maintainer:         lev_135@mail.ru
copyright:          (c) 2022, Lev Dvorkin
category:           Math
extra-source-files: CHANGELOG.md
                    README.md

common basics
  default-language:   Haskell2010

  default-extensions: OverloadedStrings
                      NamedFieldPuns
                      DuplicateRecordFields
                      OverloadedLabels
                      TupleSections
                      BlockArguments
                      LambdaCase

                      FlexibleContexts
                      FlexibleInstances
                      MultiParamTypeClasses
                      RankNTypes
                      ScopedTypeVariables
                      ConstraintKinds
                      DataKinds
                      PartialTypeSignatures
                      DeriveGeneric

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wmissing-exported-signatures
                      -Wno-name-shadowing
                      -Wno-unused-do-bind

  build-depends:      base
                    , text
                    , containers
                    , mtl
                    , extra

common lib-deps
  build-depends:      megaparsec
                    , parser-combinators
                    , space-consumers
                    , prettyprinter
                    , optics
                    , generic-optics
                    , exceptions
                    , safe

library
  import:             basics, lib-deps
  hs-source-dirs:     src
  exposed-modules:    Language.FineTeX
                      Language.FineTeX.Utils
                      Language.FineTeX.Source.Syntax
                      Language.FineTeX.Source.Parser.Utils
                      Language.FineTeX.Source.Parser.Definitions


executable texgen
  import:             basics
  hs-source-dirs:     app
  main-is:            Main.hs
  other-modules:      IOUtils

  build-depends:      finetex
                    , optparse-applicative
                    , filepath
                    , pretty-simple
  if os(windows)
    build-depends:    Win32
  ghc-options:        -O2 -threaded

test-suite finetex-test
  import:             basics, lib-deps
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      Utils
                      UtilsSpec
                      Source.Parser.UtilsSpec
                      Source.Parser.Definitions

  type:               exitcode-stdio-1.0
  build-depends:      finetex
                    , hspec
                    , hspec-megaparsec
                    , raw-strings-qq
